Beaucoup trop de changements pour tout détailler, création package installable its working, changement des chemins de fichier, tests pour le main (pas pour streamlit), refonte de la structure

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,15 @@ Thumbs.db
 !xfoil.exe
 
 # Sphinx documentation build files
+#docs/build/
+#*.doctree
+#*.html
+#*.txt
+#*.buildinfo
+docs/source/
+
+# Fichiers générés
+.egg-info/
+*.egg
 build/
-*.doctree
-*.html
-*.txt
-*.buildinfo
+dist/
